--- a/client/main.css
+++ b/client/main.css
@@ -22,7 +22,7 @@ body {
 }
 
 .header {
-	height: 60vh;
+	height: 70vh;
 	background-size: cover;
 	background-position: top;
 	position: relative;
@@ -30,4 +30,16 @@ body {
 
 .green {
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40,180,31, 0.8));
+}
+
+.blue {
+  background-image: linear-gradient(to right bottom, rgba(77,166,255, 0.8), rgba(0,107,255, 0.8));
+}
+
+.orange {
+  background-image: linear-gradient(to right bottom, rgba(255,101,0, 0.8), rgba(255,37,0, 0.8));
+}
+
+.purple {
+  background-image: linear-gradient(to right bottom, rgb(255,52,255, 0.8), rgba(173,0,230,0.8));
 }
