--- a/client/main.css
+++ b/client/main.css
@@ -41,5 +41,9 @@ body {
 }
 
 .purple {
-  background-image: linear-gradient(to right bottom, rgb(255,52,255, 0.8), rgba(173,0,230,0.8));
+  background-image: linear-gradient(to right bottom, rgba(255,52,255, 0.8), rgba(173,0,230,0.8));
+}
+
+.red {
+  background-image: linear-gradient(to right bottom, rgba(255,77,77,0.8), rgba(255,0,0,0.8));
 }
