--- a/client/main.css
+++ b/client/main.css
@@ -28,6 +28,102 @@ body {
 	position: relative;
 }
 
+.header-img {
+  height: 35%;
+  border-radius: 100%;
+  align: center;
+  margin-left: 44.5%;
+  margin-top: 5%
+}
+
+.custom-card {
+  width: 27%
+}
+
+.card-mobile-xs-4 {
+  background-color: #fff;
+  box-shadow: 0 0 40px -6px #777;
+  border-radius: 10px;
+  margin-left: 36%;
+  margin-bottom: 20px;
+  width: 100%;
+  height: 600px;
+  word-wrap: break-word;
+}
+
+.card-mobile-xs-12 {
+    background-color: #fff;
+    box-shadow: 0 0 40px -6px #777;
+    border-radius: 10px;
+    margin-left: 9.5%;
+    margin-bottom: 20px;
+    width: 80%;
+    height: 330px;
+    word-wrap: break-word;
+}
+
+.blog-list-h1 {
+  font-weight: bold;
+}
+
+.card-img {
+   width: 100%;
+   height: 100%;
+   display: block;
+   border-radius: 10px
+}
+
+
+.xs-12-img-not-found {
+  width: 100%;
+  height: 330px;
+  display: block;
+  background-color: #777;
+}
+
+.xs-4-img-not-found {
+  width: 100%;
+  height: 200px;
+  display: block;
+  background-color: #777;
+}
+
+@media screen and (max-width: 500px) {
+  .header-img{
+    height: 10%;
+    margin-left: 42%;
+    margin-top: 50%;
+  }
+
+  .navbar .navbar-default{
+    background-color: #ececec
+  }
+
+  .card-mobile-xs-4 {
+    margin-left: 3%;
+    height: 700px;
+  }
+
+  .card-mobile-xs-12 {
+      display: none;
+  }
+
+  .card-img {
+    height: 230px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .xs-4-img-not-found {
+    height: 230px;
+  }
+
+  .custom-card {
+    width: 100%;
+  }
+}
+
 .green {
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40,180,31, 0.8));
 }
@@ -48,18 +144,60 @@ body {
   background-image: linear-gradient(to right bottom, rgba(255,77,77,0.8), rgba(255,0,0,0.8));
 }
 
-
-@media screen and (max-width: 500px) and (max-height: 500px){
-    .header-img {
-      height: 2px
-    }
-
-    .card {
-      width: 100%;
-    }
-
-    .col-md-4 .custom-card {
-      width: 100%
-    }
-
+.Loader,
+.Loader:before,
+.Loader:after {
+  border-radius: 50%;
+  width: 2.5em;
+  height: 2.5em;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation: load7 1.8s infinite ease-in-out;
+  animation: load7 1.8s infinite ease-in-out;
+}
+.Loader {
+  color: salmon;
+  font-size: 10px;
+  margin: 80px auto;
+  position: relative;
+  text-indent: -9999em;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+.Loader:before,
+.Loader:after {
+  content: '';
+  position: absolute;
+  top: 0;
+}
+.Loader:before {
+  left: -3.5em;
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+.Loader:after {
+  left: 3.5em;
+}
+@-webkit-keyframes load7 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 2.5em 0 -1.3em;
+  }
+  40% {
+    box-shadow: 0 2.5em 0 0;
+  }
+}
+@keyframes load7 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 2.5em 0 -1.3em;
+  }
+  40% {
+    box-shadow: 0 2.5em 0 0;
+  }
 }
