--- a/client/main.css
+++ b/client/main.css
@@ -51,41 +51,40 @@ body {
   word-wrap: break-word;
 }
 
-.card-mobile-xs-12 {
-    background-color: #fff;
-    box-shadow: 0 0 40px -6px #777;
-    border-radius: 10px;
-    margin-left: 9.5%;
-    margin-bottom: 20px;
-    width: 80%;
-    height: 330px;
-    word-wrap: break-word;
-}
-
 .blog-list-h1 {
   font-weight: bold;
+  height: 10px;
 }
 
 .card-img {
    width: 100%;
-   height: 100%;
+   height: 200px;
    display: block;
-   border-radius: 10px
+   border-radius: 10px;
 }
 
 
-.xs-12-img-not-found {
-  width: 100%;
-  height: 330px;
-  display: block;
-  background-color: #777;
-}
 
 .xs-4-img-not-found {
   width: 100%;
   height: 200px;
   display: block;
   background-color: #777;
+  border-radius: 10px
+}
+
+.navbar-custom {
+  background: transparent;
+}
+
+.admin-nav > li > a{
+  color: #fff;
+  display: inline-flex;
+  text-decoration: none;
+}
+
+.admin-nav > li > a:hover{
+  color: black;
 }
 
 
@@ -109,10 +108,6 @@ body {
     height: 700px;
   }
 
-  .card-mobile-xs-12 {
-      display: none;
-  }
-
   .card-img {
     height: 230px;
     border-radius: 10px;
@@ -122,10 +117,15 @@ body {
 
   .xs-4-img-not-found {
     height: 230px;
+    border-radius: 10px
   }
 
   .custom-card {
     width: 100%;
+  }
+
+  .navbar-custom {
+    display: none
   }
 }
 
